Fixed the css up so the page doesn't look terrible on smaller resolutions.

--- a/src/pages/loginPage/loginPage.css
+++ b/src/pages/loginPage/loginPage.css
@@ -1,14 +1,10 @@
 .login-page {
-    width:  100vw;
-    height: 100vh;
+    width: 100vw;
+    height: 100%;
+    text-align: center;
 }
 
 .login-content {
-    position: absolute;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -21,12 +17,17 @@
     align-items: center;
 }
 
-.login-title {
+.login-form-title {
+    margin: 5%;
+}
 
+.login-form {
+    height: 100%;
+    width: 100%;
 }
 
 .login-form-container {
-    height: 45vh;
+    height: 50vh;
     width: 25vw;
     background-color: var(--input-container-background-color);
     border-radius: 10px;
@@ -111,4 +112,51 @@
 
 .login-footer-hr {
     margin: 20px 15% 0 15%;
+}
+
+
+@media screen and (max-width: 1300px) {
+    .login-form-title {
+        margin: 5%;
+        margin-bottom: 0;
+    }
+
+    .login-form {
+        height: 100%;
+        width: 100%;
+    }
+
+    .login-form-container {
+        height: 65%;
+        width: 35vw;
+    }
+
+    .login-label {
+        margin-top: 3%;
+    }
+
+    .login-input {
+        font-size: medium;
+    }
+
+    .login-submit {
+        margin-top: 3%;
+    }
+
+
+}
+
+@media screen and (max-width: 600px) {
+    .login-form-container {
+        width: 50vw;
+        height: 45%;
+    }
+
+    .login-label {
+        margin-top: 3%;
+    }
+    
+    .login-input {
+        font-size: medium;
+    }
 }
